@@ -384,6 +384,10 @@ sub deleteDmn
 		}
 	}
 
+	# Remove log directory if any
+	$rs = iMSCP::Dir->new( dirname => "$self->{'config'}->{'APACHE_LOG_DIR'}/$data->{'DOMAIN_NAME'}" )->remove();
+	return $rs if $rs;
+
 	# Remove fcgi directory if any
 	my $fcgiDir = "$self->{'config'}->{'PHP_STARTER_DIR'}/$data->{'DOMAIN_NAME'}";
 
