@@ -384,6 +384,10 @@ sub deleteDmn
 		}
 	}
 
+	# Remove log directory if any
+	$rs = iMSCP::Dir->new( dirname => "$self->{'config'}->{'APACHE_LOG_DIR'}/$data->{'DOMAIN_NAME'}" )->remove();
+	return $rs if $rs;
+
 	# Remove vlogger entry if any
 	require iMSCP::Database;
 	$rs = iMSCP::Database->factory()->doQuery(
